--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -104,6 +104,11 @@
       }
     }
   }
+  &.wide {
+    width:1200px;
+    max-width:1200px;
+    margin:0 auto;
+  }
 }
 
 // Home page specific styles
